--- a/config/etc/bitcoin/bitcoin.conf
+++ b/config/etc/bitcoin/bitcoin.conf
@@ -1,6 +1,3 @@
-# This config should be placed in following path:
-# ~/.bitcoin/bitcoin.conf
-
 # [network]
 # Add a node IP address to connect to and attempt to keep the connection open. T                                                                                                                                   his option can be set multiple times.
 ## Barcelona Bitcoin Only node
@@ -12,14 +9,22 @@ addnode=ots6ud7ovx6furs4sxlm7aze5q44qtoeapwcukelcxc3i2r5tkxgdlqd.onion:8333
 # Only connect to peers via Tor.
 #onlynet=onion
 
+# Support filtering of blocks and transactions with bloom filters.
+# Bisq requires it.
+# peerbloomfilters=1
+
 # [core]
 # Maintain a full transaction index, used by the getrawtransaction rpc call.
 txindex=1
+# Execute command on startup.
+startupnotify=chmod\ g+r\ /var/lib/bitcoind/.cookie
 
 # Initial block download optimizations
+############################################################################################################################################
 # Comment them out and restart after full sync
 dbcache=4000
 blocksonly=1
+############################################################################################################################################
 
 # [rpc]
 # Accept command line and JSON-RPC commands.
